<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="330dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCloseDialog"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_close"
                tools:ignore="VectorDrawableCompat" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/tvBoldBlack"
                android:id="@+id/tvPerangkatNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/itemName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                style="@style/tvNormalGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/rvItemName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPerangkatNama" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_background"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView3"
                style="@style/tvNormalGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/rvItemStok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edStock"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/edit_background"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAddUpdate"
                style="@style/btBold3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/itemAction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edStock" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDeleteItem"
                style="@style/btBold4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"
                android:text="@string/itemDelete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edStock" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>